--- a/03-rem适配布局/08-mobile-SN/css/common.css
+++ b/03-rem适配布局/08-mobile-SN/css/common.css
@@ -1,6 +1,13 @@
 html {
   font-size: 50px;
 }
+a {
+  text-decoration: none;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
 @media screen and (min-width: 320px) {
   html {
     font-size: 21.33333333px;
