--- a/03-rem适配布局/08-mobile-SN/css/common.less
+++ b/03-rem适配布局/08-mobile-SN/css/common.less
@@ -1,6 +1,15 @@
 html {
     font-size: 50px;
 }
+
+a {
+    text-decoration: none;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
 // 定义此次划分的份数为15份
 @no:15;
 @media screen and (min-width:320px) {
