--- a/03-rem适配布局/08-mobile-SN/css/index.css
+++ b/03-rem适配布局/08-mobile-SN/css/index.css
@@ -1,6 +1,13 @@
 html {
   font-size: 50px;
 }
+a {
+  text-decoration: none;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
 @media screen and (min-width: 320px) {
   html {
     font-size: 21.33333333px;
@@ -65,6 +72,7 @@ body {
   background-color: #F2F2F2;
 }
 .search-content {
+  display: flex;
   position: fixed;
   top: 0;
   left: 50%;
@@ -72,4 +80,70 @@ body {
   width: 15rem;
   height: 1.76rem;
   background-color: #FFC001;
+}
+.search-content .classify {
+  width: 0.88rem;
+  height: 1.4rem;
+  margin: 0.22rem 0.5rem 0.14rem 0.48rem;
+  background: url(../images/classify.png) no-repeat;
+  background-size: 0.88rem 1.4rem;
+}
+.search-content .search {
+  flex: 1;
+}
+.search-content .search input {
+  width: 100%;
+  margin-top: 0.24rem;
+  padding-left: 1.1rem;
+  border: 0;
+  height: 1.32rem;
+  font-size: 0.5rem;
+  border-radius: 0.66rem;
+  background-color: #FFF2CC;
+  outline: none;
+}
+.search-content .login {
+  width: 1.5rem;
+  height: 1.4rem;
+  margin: 0.2rem;
+  color: #ffffff;
+  font-size: 0.5rem;
+  text-align: center;
+  line-height: 1.4rem;
+}
+.banner {
+  width: 15rem;
+  height: 7.36rem;
+}
+.banner img {
+  width: 100%;
+  height: 100%;
+}
+.ad {
+  display: flex;
+}
+.ad a {
+  flex: 1;
+}
+.ad a img {
+  width: 100%;
+}
+nav {
+  width: 15rem;
+}
+nav a {
+  float: left;
+  width: 3rem;
+  height: 2.8rem;
+  text-align: center;
+}
+nav a img {
+  display: block;
+  width: 1.64rem;
+  height: 1.64rem;
+  margin: 0.2rem auto 0;
+}
+nav a span {
+  font-size: 0.5rem;
+  color: #333333;
 }
