--- a/03-rem适配布局/08-mobile-SN/css/index.less
+++ b/03-rem适配布局/08-mobile-SN/css/index.less
@@ -11,7 +11,9 @@ body {
 }
 // 定义基本文字大小
 @baseFont:50;
+// 搜索框部分
 .search-content {
+    display: flex;
     position: fixed;
     top: 0;
     left: 50%;
@@ -19,4 +21,77 @@ body {
     width: 15rem;
     height: 88rem / @baseFont;
     background-color: #FFC001;
+    .classify {
+        width: 44rem / @baseFont;
+        height: 70rem / @baseFont;
+        margin: 11rem / @baseFont 25rem / @baseFont 7rem / @baseFont 24rem / @baseFont;
+        background: url(../images/classify.png) no-repeat;
+        background-size: 44rem / @baseFont 70rem / @baseFont;
+    }
+    .search {
+        flex: 1;
+        input {
+            width: 100%;
+            margin-top: 12rem / @baseFont;
+            padding-left: 55rem / @baseFont;
+            border: 0;
+            height: 66rem / @baseFont;
+            font-size: 25rem / @baseFont;
+            border-radius: 33rem / @baseFont;
+            background-color: #FFF2CC;
+            outline: none;
+        }
+    }
+    .login {
+        width: 75rem / @baseFont;
+        height: 70rem / @baseFont;
+        margin: 10rem / @baseFont;
+        color: #ffffff;
+        font-size: 25rem / @baseFont;
+        text-align: center;
+        line-height: 70rem / @baseFont;  
+    }
 }
+
+// banner部分
+.banner {
+    width: 750rem / @baseFont;
+    height: 368rem / @baseFont;
+    img {
+        width: 100%;
+        height: 100%;
+    } 
+}
+
+// ad部分
+.ad {
+    display: flex;
+    a {
+        flex: 1;
+        img {
+            width: 100%;
+        }
+    }
+}
+// nav部分
+
+nav {
+    width: 750rem / @baseFont;
+    a {
+        float: left;
+        width: 150rem / @baseFont;
+        height: 140rem / @baseFont;
+        text-align: center;
+        img {
+            display: block;
+            width: 82rem / @baseFont;
+            height: 82rem / @baseFont;
+            margin: 10rem / @baseFont auto 0;
+        }
+        span {
+            font-size: 25rem / @baseFont;
+            color: #333333;
+        }
+    }
+}
+
